$Id$

****************************** DRUPAL 6 - 2.x BRANCH ********************************

August 24, 2009
---------------
#538344 by merlinofchaos: Added view of a user's topics.
#537822 by Michelle, stephthegeek: Added forum-topic-title class to title in topic listing. Also fixed spacing on items in topic listing.

August 22, 2009
---------------
#551548 by Michelle, crea: Added check to make sure links array isn't empty before iterating through it.
#537018 by bas.hr: Removed typo extra . in class name.

August 10, 2009
---------------
NOISSUE by merlinofchaos: Add a sort widget for the forum topic list that utilizes the tablesort headers.
NOISSUE by merlinofchaos: Add a time period plus role exclusion to the most active poster pane.
 
August 3, 2009
--------------
NOISSUE by merlinofchaos: Add a "most active poster" block and a view of "My forum posts" to easily follow what a person has posted.

August 2, 2009
--------------
NOISSUE by Michelle: Fixed notices.
#413494 by Michelle, snufkin: Added support for commend edited message in the post template.
#479124 by Michelle: Merged some topic list preprocessing into advanced_forum_get_topics and cleaned up topic list when views is not enabled.

August 1, 2009
--------------
#528480 by Michelle: Added extra divs around topics / latest user on statistics for seperate styling.
#436084 by MGParisi: Reduced size of some Blue Lagoon images.
#537018 by Michelle: Indented subbody of statistics in Naked and removed indenting from Boxy/Cloudless Day
#537018 by Michelle: Added a margin to the right of the post reply button on top of topics to Naked.
                     Put padding around .forum-post-content and .forum-post-title in Naked.
                     Added boxes around .forum-top-post-footer and .forum-topic-navigation in Boxy.
                     Made post number white on Boxy and Blue Lagoon.
                     Added odd/even table shading to Boxy as well as borders around the TDs.